--- a/index.html
+++ b/index.html
@@ -89,21 +89,23 @@
             <div class="row">
                 <div class="col-lg-4 ms-auto">
                     <p class="lead">👋 I'm Monika. Fictional person for preview purposes :) I'm working with newest
-                        front-end frameworks like React and Bootstrap.I am enthusiastic about learning new
+                        front-end frameworks like React,Angular and Bootstrap.I am enthusiastic about learning new
                         skills,expanding my knowledge and applying it to real world problems.</p>
 
                 </div>
                 <div class="col-lg-4 me-auto">
                     <p class="lead">Fast learner, hard worker and team player who is proficient in an array of scripting
                         languages and multimedia Web tools.I am quick with numbers,skilled at critical thinking,and have
-                        a creative mind and vivid imagination.</p>
-                    <a class="btn btn-secondary text-white btn-xl ms-5"
+                        a creative mind and vivid imagination.</p>                 
+                </div>            
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <a class="btn btn-secondary text-white btn-xl"
                         href="https://drive.google.com/file/d/1IeDNV68GIg86s6zi3eZJlxia8HLXNF2m/view" target="_blank"
                         id="ResumeButton">Resume&nbsp;&nbsp;<i class="fa-solid fa-file"></i></a>
                 </div>
             </div>
-
-
         </div>
     </section>
 
@@ -136,7 +138,7 @@
             </div>
         </div>
     </section>
-    
+
     <!--About Projects-->
     <section class="page-section bg-primary text-white mb-0" id="projects">
         <div class="container">
@@ -152,20 +154,18 @@
             <div class="text-center ms-5">
                 <div class="row mb-3 p-5">
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card m-auto" style="width: 18rem;">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title text-black">Project 1</h5>
                                 <p class="card-text text-black">Some quick example text to build on the card title and
-                                    make up the
-                                    bulk
-                                    of the card's content.</p>
+                                    make up the bulk of the card's content.</p>
                                 <a href="#" class="btn btn-primary">Click to View</a>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card m-auto" style="width: 18rem;">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title text-black">Project 2</h5>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="row p-5">
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card m-auto" style="width: 18rem;">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title text-black">Project 3</h5>
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card m-auto" style="width: 18rem;">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title text-black">Project 4</h5>
@@ -214,7 +214,7 @@
     <section class="page-section" id="contact">
         <div class="container">
             <!-- Contact Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0" style="font-size:40px;">Contact Me</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -222,12 +222,20 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Contact Section Form-->
-            <div class="row justify-content-center">
-                <div class="col-lg-8 col-xl-7">
+            <div class="row">
+                <div class="col-lg-2 ms-auto">
+                    <i class="fa-solid fa-phone fa-2xl"></i>Call me
+                    <p>+91 8489703540</p>
+                    <i class="fa-solid fa-envelope fa-2xl"></i>Email
+                    <p>panmonikmm@gmail.com</p>
+                    <i class="fa-solid fa-location-dot"></i>Location
+                    <p>Vellore-632311,Tamil Nadu,India</p>
+                </div>
+                <div class="col-lg-4 me-auto">
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <!-- Name input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="name" type="text" placeholder="Enter your name..."
+                        <div class="form-floating mb-3"> 
+                             <input class="form-control" id="name" type="text" placeholder="Enter your name..."
                                 data-sb-validations="required" />
                             <label for="name">Full name</label>
                             <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
@@ -279,9 +287,10 @@
                         </div>
                         <!-- Submit Button-->
                         <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
-                    </form>
-                </div>
+                    </form>        
+                </div>     
             </div>
+           
         </div>
     </section>
 
