--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <div class="col-lg-4 me-auto">
                     <p class="lead">Fast learner, hard worker and team player who is proficient in an array of scripting
                         languages and multimedia Web tools.I am quick with numbers,skilled at critical thinking,and have
-                        a creative mind and vivid imagination.</p>                 
-                </div>            
+                        a creative mind and vivid imagination.</p>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -154,33 +154,37 @@
             <div class="text-center ms-5">
                 <div class="row mb-3 p-5">
                     <div class="col">
-                        <div class="card m-auto" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card m-auto" style="width: 20rem;">
+                            <img src="./assets/chat-background.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title text-black">Project 1</h5>
-                                <p class="card-text text-black">Some quick example text to build on the card title and
-                                    make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Click to View</a>
+                                <h5 class="card-title text-black">Chat-Box</h5>
+                                <a href="https://github.com/MonikaPandian/mern-chat-app/tree/master/client"
+                                    class="btn btn-primary" target="_blank">Front-end</a>
+                                <a href="https://github.com/MonikaPandian/mern-chat-app/tree/master/server"
+                                    class="btn btn-primary" target="_blank">Back-end</a>
+                                <a href="http://35.154.249.94" class="btn btn-primary mt-2" target="_blank">Live
+                                    site</a>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card m-auto" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card m-auto" style="width: 20rem;">
+                            <img src="./assets/e-commerce-app-background.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title text-black">Project 2</h5>
-                                <p class="card-text text-black">Some quick example text to build on the card title and
-                                    make up the
-                                    bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Click to View</a>
+                                <h5 class="card-title text-black">Chat-Box</h5>
+                                <a href="https://github.com/MonikaPandian/mern-e-commerce-app/tree/master/frontend"
+                                    class="btn btn-primary" target="_blank">Front-end</a>
+                                <a href="https://github.com/MonikaPandian/mern-e-commerce-app/tree/master/backend"
+                                    class="btn btn-primary" target="_blank">Back-end</a>
+                                <a href="http://35.154.249.94" class="btn btn-primary mt-2" target="_blank">Live
+                                    site</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row p-5">
                     <div class="col">
-                        <div class="card m-auto" style="width: 18rem;">
+                        <div class="card m-auto" style="width: 20rem;">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title text-black">Project 3</h5>
@@ -193,7 +197,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card m-auto" style="width: 18rem;">
+                        <div class="card m-auto" style="width: 20rem;">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title text-black">Project 4</h5>
@@ -214,7 +218,8 @@
     <section class="page-section" id="contact">
         <div class="container">
             <!-- Contact Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0" style="font-size:40px;">Contact Me</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0" style="font-size:40px;">
+                Contact Me</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -234,8 +239,8 @@
                 <div class="col-lg-4 me-auto">
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <!-- Name input-->
-                        <div class="form-floating mb-3"> 
-                             <input class="form-control" id="name" type="text" placeholder="Enter your name..."
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="name" type="text" placeholder="Enter your name..."
                                 data-sb-validations="required" />
                             <label for="name">Full name</label>
                             <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
@@ -287,10 +292,10 @@
                         </div>
                         <!-- Submit Button-->
                         <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
-                    </form>        
-                </div>     
+                    </form>
+                </div>
             </div>
-           
+
         </div>
     </section>
 
