--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#home"><i
                                 class="fa-solid fa-house"></i>&nbsp;Home</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="#about">About</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="#skills">Skills</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="#projects">Projects</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="#contact">Contact</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about"><i
+                                class="fa-solid fa-user"></i>&nbsp;&nbsp;About</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#skills"><i
+                                class="fa-solid fa-screwdriver-wrench"></i>&nbsp;&nbsp;Skills</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#projects"><i
+                                class="fa-solid fa-list-check"></i>&nbsp;&nbsp;Projects</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact"><i
+                                class="fa-solid fa-paper-plane"></i>&nbsp;&nbsp;Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +55,7 @@
         <div class="container d-flex align-items-center flex-column">
 
             <!--Masthead Heading-->
-            <h1>Hi ,&nbspI'm</h1>
+            <h1>Hi ,&nbsp;I'm</h1>
             <h1 class="masthead-heading text-uppercase mb-0">Monika</h1>
             <!--Icon Divider-->
             <div class="divider-custom divider-light">
@@ -88,7 +88,7 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ms-auto">
-                    <p class="lead">👋 I'm Monika. Fictional person for preview purposes :) I'm working with newest
+                    <p class="lead">👋 I'm Monika. I'm working with newest
                         front-end frameworks like React,Angular and Bootstrap.I am enthusiastic about learning new
                         skills,expanding my knowledge and applying it to real world problems.</p>
 
@@ -102,8 +102,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <a class="btn btn-secondary text-white btn-xl"
-                        href="https://drive.google.com/file/d/1IeDNV68GIg86s6zi3eZJlxia8HLXNF2m/view" target="_blank"
-                        id="ResumeButton">Resume&nbsp;&nbsp;<i class="fa-solid fa-file"></i></a>
+                        href="https://drive.google.com/file/d/1dLDjBesltYxTECkHcBY4-ewNkle_zgBn/view?usp=share_link"
+                        target="_blank" id="ResumeButton">Resume&nbsp;&nbsp;<i class="fa-solid fa-file"></i></a>
                 </div>
             </div>
         </div>
@@ -161,8 +161,9 @@
                                 <a href="https://github.com/MonikaPandian/mern-chat-app/tree/master/client"
                                     class="btn btn-primary" target="_blank">Front-end</a>
                                 <a href="https://github.com/MonikaPandian/mern-chat-app/tree/master/server"
-                                    class="btn btn-primary" target="_blank">Back-end</a>
-                                <a href="http://35.154.249.94" class="btn btn-primary mt-2" target="_blank">Live
+                                    class="btn btn-primary" target="_blank">Back-end</a><br />
+                                <a href="https://mern-chat-box-app.onrender.com" class="btn btn-primary mt-2"
+                                    target="_blank">Live
                                     site</a>
                             </div>
                         </div>
@@ -171,12 +172,13 @@
                         <div class="card m-auto" style="width: 20rem;">
                             <img src="./assets/e-commerce-app-background.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title text-black">Chat-Box</h5>
+                                <h5 class="card-title text-black">E-Shop Spot</h5>
                                 <a href="https://github.com/MonikaPandian/mern-e-commerce-app/tree/master/frontend"
                                     class="btn btn-primary" target="_blank">Front-end</a>
                                 <a href="https://github.com/MonikaPandian/mern-e-commerce-app/tree/master/backend"
-                                    class="btn btn-primary" target="_blank">Back-end</a>
-                                <a href="http://35.154.249.94" class="btn btn-primary mt-2" target="_blank">Live
+                                    class="btn btn-primary" target="_blank">Back-end</a><br />
+                                <a href="https://mern-e-shop-spot-app.onrender.com" class="btn btn-primary mt-2"
+                                    target="_blank">Live
                                     site</a>
                             </div>
                         </div>
@@ -302,7 +304,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
