--- a/index.html
+++ b/index.html
@@ -187,14 +187,16 @@
                 <div class="row p-5">
                     <div class="col">
                         <div class="card m-auto" style="width: 20rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="./assets/video-chat.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title text-black">Project 3</h5>
-                                <p class="card-text text-black">Some quick example text to build on the card title and
-                                    make up the
-                                    bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Click to View</a>
+                                <h5 class="card-title text-black">Google Meet clone</h5>
+                                <a href="https://github.com/MonikaPandian/mern-e-commerce-app/tree/master/frontend"
+                                    class="btn btn-primary" target="_blank">Front-end</a>
+                                <a href="https://github.com/MonikaPandian/mern-e-commerce-app/tree/master/backend"
+                                    class="btn btn-primary" target="_blank">Back-end</a><br />
+                                <a href="https://mern-e-commerce-app-indol.vercel.app/" class="btn btn-primary mt-2"
+                                    target="_blank">Live
+                                    site</a>
                             </div>
                         </div>
                     </div>
@@ -239,7 +241,7 @@
                     <p>Vellore-632311,Tamil Nadu,India</p>
                 </div>
                 <div class="col-lg-4 me-auto">
-                    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                    <form id="contact-form" data-sb-form-api-token="API_TOKEN">
                         <!-- Name input-->
                         <div class="form-floating mb-3">
                             <input class="form-control" id="name" type="text" placeholder="Enter your name..."
@@ -293,7 +295,7 @@
                             <div class="text-center text-danger mb-3">Error sending message!</div>
                         </div>
                         <!-- Submit Button-->
-                        <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
+                        <button class="btn btn-primary btn-xl" id="submitButton" type="submit">Send</button>
                     </form>
                 </div>
             </div>
