--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <p>Vellore-632311,Tamil Nadu,India</p>
                 </div>
                 <div class="col-lg-4 me-auto">
-                    <form id="contact-form" data-sb-form-api-token="API_TOKEN">
+                    <form id="contact-form">
                         <!-- Name input-->
                         <div class="form-floating mb-3">
                             <input class="form-control" id="name" type="text" placeholder="Enter your name..."
