--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                     class="btn btn-primary" target="_blank">Front-end</a>
                                 <a href="https://github.com/MonikaPandian/mern-chat-app/tree/master/server"
                                     class="btn btn-primary" target="_blank">Back-end</a><br />
-                                <a href="https://mern-chat-app-ten.vercel.app/" class="btn btn-primary mt-2"
+                                <a href="https://mern-chat-app-nu.vercel.app/" class="btn btn-primary mt-2"
                                     target="_blank">Live
                                     site</a>
                             </div>
@@ -183,7 +183,7 @@
                                     class="btn btn-primary" target="_blank">Front-end</a>
                                 <a href="https://github.com/MonikaPandian/mern-e-commerce-app/tree/master/backend"
                                     class="btn btn-primary" target="_blank">Back-end</a><br />
-                                <a href="https://mern-e-commerce-app-indol.vercel.app/" class="btn btn-primary mt-2"
+                                <a href="https://mern-e-commerce-app-alpha.vercel.app/" class="btn btn-primary mt-2"
                                     target="_blank">Live
                                     site</a>
                             </div>
