--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="assets/icons8-portfolio-64.png" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -17,7 +17,7 @@
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <link href="./style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -159,7 +159,7 @@
             <!-- About Section Content-->
             <div class="text-center ms-5">
                 <div class="row mb-3 p-5">
-                    <div class="col">
+                    <div class="col m-2">
                         <div class="card m-auto" style="width: 20rem;">
                             <img src="./assets/chat-background.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -174,7 +174,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col m-2">
                         <div class="card m-auto" style="width: 20rem;">
                             <img src="./assets/e-commerce-app-background.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <div class="row p-5">
-                    <div class="col">
+                    <div class="col m-2">
                         <div class="card m-auto" style="width: 20rem;">
                             <img src="./assets/video-chat.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -206,16 +206,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col m-2">
                         <div class="card m-auto" style="width: 20rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="./assets/expense-image.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title text-black">Project 4</h5>
-                                <p class="card-text text-black">Some quick example text to build on the card title and
-                                    make up the
-                                    bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Click to View</a>
+                                <h5 class="card-title text-black">Expense Management App</h5>
+                                <a href="https://github.com/MonikaPandian/mern-expense-management-app/tree/master/frontend"
+                                    class="btn btn-primary" target="_blank">Front-end</a>
+                                <a href="https://github.com/MonikaPandian/mern-expense-management-app"
+                                    class="btn btn-primary" target="_blank">Back-end</a><br />
+                                <a href="https://mern-expense-management-app.vercel.app/" class="btn btn-primary mt-2"
+                                    target="_blank">Live
+                                    site</a>
                             </div>
                         </div>
                     </div>
