--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
             <!-- Contact Section Form-->
             <div class="row">
                 <div class="col-lg-2 ms-auto">
-                    <i class="fa-solid fa-phone fa-2xl"></i>Call me
+                    <i class="fa-solid fa-phone fa-2xl"></i>&nbsp;&nbsp;Call me
                     <p>+91 8489703540</p>
-                    <i class="fa-solid fa-envelope fa-2xl"></i>Email
+                    <i class="fa-solid fa-envelope fa-2xl"></i>&nbsp;&nbsp;Email
                     <p>panmonikmm@gmail.com</p>
-                    <i class="fa-solid fa-location-dot"></i>Location
+                    <i class="fa-solid fa-location-dot fa-2xl"></i>&nbsp;&nbsp;Location
                     <p>Vellore-632311,Tamil Nadu,India</p>
                 </div>
                 <div class="col-lg-4 me-auto">
