--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <a class="btn btn-secondary text-white btn-xl"
-                        href="https://drive.google.com/file/d/13WA9uwo434A_rllBMpEPgY_KJZp8n0bg/view?usp=share_link"
+                        href="https://drive.google.com/file/d/1zZktam8-gpqyUlmUJMzlthQWsJ7V_J8b/view?usp=share_link"
                         target="_blank" id="ResumeButton">Resume&nbsp;&nbsp;<i class="fa-solid fa-file"></i></a>
                 </div>
             </div>
@@ -171,6 +171,9 @@
                                 <a href="https://mern-chat-app-nu.vercel.app/" class="btn btn-primary mt-2"
                                     target="_blank">Live
                                     site</a>
+                                <h5 class="card-title text-black mt-3">Tech Stack Used</h5>
+                                <p class="card-title text-black mt-2">Mongo DB, Express JS, Node JS, React JS,
+                                    Socket.io, Chakra UI </p>
                             </div>
                         </div>
                     </div>
@@ -186,6 +189,9 @@
                                 <a href="https://mern-e-commerce-app-alpha.vercel.app/" class="btn btn-primary mt-2"
                                     target="_blank">Live
                                     site</a>
+                                <h5 class="card-title text-black mt-3">Tech Stack Used</h5>
+                                <p class="card-title text-black mt-2">Mongo DB, Express JS, Node JS, React JS,
+                                    Bootstrap, Paypal, Redux </p>
                             </div>
                         </div>
                     </div>
@@ -203,6 +209,9 @@
                                 <a href="https://mern-google-meet-clone.vercel.app/" class="btn btn-primary mt-2"
                                     target="_blank">Live
                                     site</a>
+                                <h5 class="card-title text-black mt-3">Tech Stack Used</h5>
+                                <p class="card-title text-black mt-2">Mongo DB, Express JS, Node JS, React JS,
+                                    Bootstrap, Material UI, Peer JS, WebRTC </p>
                             </div>
                         </div>
                     </div>
@@ -218,6 +227,9 @@
                                 <a href="https://mern-expense-management-app.vercel.app/" class="btn btn-primary mt-2"
                                     target="_blank">Live
                                     site</a>
+                                <h5 class="card-title text-black mt-3">Tech Stack Used</h5>
+                                <p class="card-title text-black mt-2">Mongo DB, Express JS, Node JS, React JS,
+                                    Ant Design, Bootstrap, Context API </p>
                             </div>
                         </div>
                     </div>
