--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <div class="card m-auto" style="width: 20rem;">
                             <img src="./assets/video-chat.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title text-black">Google Meet clone</h5>
+                                <h5 class="card-title text-black">Google Meet Clone</h5>
                                 <a href="https://github.com/MonikaPandian/mern-google-meet-clone/tree/master/frontend"
                                     class="btn btn-primary" target="_blank">Front-end</a>
                                 <a href="https://github.com/MonikaPandian/mern-google-meet-clone"
