--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
                             <img src="./assets/video-chat.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title text-black">Google Meet Clone</h5>
-                                <a href="https://github.com/MonikaPandian/mern-google-meet-clone/tree/master/frontend"
+                                <a href="https://github.com/MonikaPandian/mern-meet-clone/tree/master/frontend"
                                     class="btn btn-primary" target="_blank">Front-end</a>
-                                <a href="https://github.com/MonikaPandian/mern-google-meet-clone"
-                                    class="btn btn-primary" target="_blank">Back-end</a><br />
-                                <a href="https://mern-google-meet-clone.vercel.app/" class="btn btn-primary mt-2"
+                                <a href="https://github.com/MonikaPandian/mern-meet-clone" class="btn btn-primary"
+                                    target="_blank">Back-end</a><br />
+                                <a href="https://mern-meet-clone-7ri3.vercel.app/" class="btn btn-primary mt-2"
                                     target="_blank">Live
                                     site</a>
                                 <h5 class="card-title text-black mt-3">Tech Stack Used</h5>
